--- a/ProyectoCovidStats/pom.xml
+++ b/ProyectoCovidStats/pom.xml
@@ -36,13 +36,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- Scheduling -->
-<parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.13</version> <!-- Cambiado de 2.7.0 a 2.7.13 -->
-    <relativePath/> <!-- lookup parent from repository -->
-</parent>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
 
 
         <!-- MySQL Driver -->
