--- a/ProyectoCovidStats/src/main/resources/application.properties
+++ b/ProyectoCovidStats/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/covidstats?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Fabian178_
+spring.datasource.password=
+
+app.country-iso=GTM
+app.report-date=2022-04-16
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
