--- a/ProyectoCovidStats/src/main/resources/application.properties
+++ b/ProyectoCovidStats/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/covidstats?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=proyectoprogra
 
 app.country-iso=GTM
 app.report-date=2022-04-16
@@ -9,3 +9,9 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.format_sql=true
+
+
+
+app.initialDelay=15000
+
+
